--- a/src/app/field-error-display.component.html
+++ b/src/app/field-error-display.component.html
@@ -2,6 +2,6 @@
   <span class="glyphicon glyphicon-remove form-control-feedback fix-error-icon"></span>
   <span class="sr-only">(error)</span>
   <div class="error-msg">
-
+    {{ errorMsg }}
   </div>
 </div>
